package jobs4u.base.applicationmanagement.dto;

public class ApplicationDTO {
}
